fix stats page layout issues

--- a/themes/new-timtec/static/css/less/stats.less
+++ b/themes/new-timtec/static/css/less/stats.less
@@ -5,6 +5,14 @@
     margin-top: -170px;
     min-height: 520px;
     padding-top: 170px;
+    padding-bottom: 30px;
     background-color: rgba(255,255,255,0.5);
+    #lessons {
+      ul.lessons {
+        li {
+          background: transparent;
+        }
+      }
+    }
   }
 }
